Modul 6 Codigo Facilito Completat

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 <h1>Hola {nombre}</h1>
+  <form action="/">
+    <input name="nombre" required type="text">
+  </form>
 </body>
 </html>
